--- a/src/server/views/index.html
+++ b/src/server/views/index.html
@@ -8,7 +8,10 @@
   <div class="container">
 
     <h1>{{ title }}</h1>
-    <p>Welcome to {{ title }}</p>
+    <p>Welcome {{ title }}</p>
+    <p>Emails: {{ email }}</p>
+    <img src='{{photo}}' alt="avatar">
+    <p>ID: {{ id }}</p>
 
   </div>
 
